<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightOrange">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="634dp"
        android:fillViewport="true"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="16dp">

                <ImageView
                    android:id="@+id/btn_add_img"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/add_image_icon" />

            </androidx.cardview.widget.CardView>

            <EditText
                android:id="@+id/recipe_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:hint="@string/recipeName" />

            <Spinner
                android:id="@+id/add_recipe_types"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/recipe_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/recipeDes" />

            <EditText
                android:id="@+id/recipe_ingredient"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/recipeIng" />

            <EditText
                android:id="@+id/recipe_steps"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:hint="@string/recipeSteps"  />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_cancel"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="2"
                    android:backgroundTint="@color/white"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_add_new_food"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="@string/addNewRecipe"
                    android:textStyle="bold"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="@color/colorOrange"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="18dp"
                    style="?android:attr/buttonBarButtonStyle" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>