<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightOrange">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="16dp">

                <ImageView
                    android:id="@+id/btn_edit_img"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/add_image_icon" />

            </androidx.cardview.widget.CardView>


            <EditText
                android:id="@+id/edit_recipe_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:hint="@string/recipeName" />

            <Spinner
                android:id="@+id/edit_recipe_types"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/edit_recipe_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/recipeDes" />

            <EditText
                android:id="@+id/edit_recipe_ingredient"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/recipeIng" />

            <EditText
                android:id="@+id/edit_recipe_steps"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:hint="@string/recipeSteps"  />


        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>